--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
-    "typeorm": "^0.3.17",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
-    "reflect-metadata": "^0.1.13"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
