--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.6",
+    "better-sqlite3": "^9.2.2",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
